# transfer-vs-relearning

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: paths.example.yaml
scripts/: acquire_m1_cross_family_candidate.py  adjudicate_m1_retention_evaluation.py  audit_acquisition_checkpoint.py  audit_m1_canonical_form_diversity_exposure.py  audit_m1_cross_family_tokenization.py  build_acquisition_diagnostics.py  build_acquisition_ladder.py  build_m1_canonical_form_diversity_dataset.py  build_m1_form_generalization_datasets.py  build_m1_recipe_dataset.py  build_pre_m2_followup_contract.py  build_pre_m2_wp1b_datasets.py  build_pre_m2_wp3_stage_a.py  build_relation_v2_binding_control.py  compare_general_capability.py  compare_pre_m2_frozen_suite.py  compare_pre_m2_wp1b.py  create_local_model_manifest.py  download_model.py  evaluate_corpora_perplexity.py  evaluate_facts.py  evaluate_general_capability.py  evaluate_pre_m2_frozen_suite.py  evaluate_turkish_bridge.py  finalize_turkish_bridge_corpus.py  finalize_turkish_bridge_evaluation.py  freeze_m1_form_generalization_launch.py  freeze_pre_m2_wp1b_launch.py  freeze_pre_m2_wp3_launch.py  m1_cross_family_preflight.py  m1_form_generalization_preflight.py  m1_qwen_checkpoint_pareto_preflight.py  prepare_general_capability_corpus.py  prepare_m1_canonical_form_diversity_config.py  prepare_m1_canonical_form_diversity_evaluation.py  prepare_m1_cross_family_config.py  prepare_m1_cross_family_evaluation.py  prepare_m1_form_generalization_config.py  prepare_m1_form_generalization_evaluation.py  (+36 more)
tests/: test_data_core.py  (+20 more)
(+209 files in other folders)
